--- a/NewsViews/app/src/main/res/layout/activity_search_results.xml
+++ b/NewsViews/app/src/main/res/layout/activity_search_results.xml
@@ -6,4 +6,11 @@
     android:layout_height="match_parent"
     tools:context=".ui.search.SearchResultsActivity">
 
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="TextView"
+        tools:layout_editor_absoluteX="66dp"
+        tools:layout_editor_absoluteY="132dp" />
 </android.support.constraint.ConstraintLayout>
