--- a/NewsViews/app/src/main/res/layout/activity_main.xml
+++ b/NewsViews/app/src/main/res/layout/activity_main.xml
@@ -3,9 +3,19 @@
 
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/activity_main"
+    android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:fitsSystemWindows="true">
+
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+        android:background="?attr/colorPrimary"
+        app:popupTheme="@style/AppTheme.PopupOverlay"
+        android:layout_alignParentTop="true"
+        />
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -33,14 +43,11 @@
     </RelativeLayout>
 
     <android.support.design.widget.NavigationView
+        android:id="@+id/navigation"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        app:menu="@menu/navigation_menu"
         android:layout_gravity="start"
-        app:headerLayout="@layout/nav_header"
-        android:id="@+id/nv">
-
-    </android.support.design.widget.NavigationView>
+        app:menu="@menu/navigation_menu" />
 
 
 </android.support.v4.widget.DrawerLayout>
