Add_Glide_To_Show_Image_News_View_And_Show_Number_Search_Result

--- a/NewsViews/app/src/main/res/layout/activity_main.xml
+++ b/NewsViews/app/src/main/res/layout/activity_main.xml
@@ -8,6 +8,8 @@
     android:layout_height="match_parent"
     android:fitsSystemWindows="true">
 
+
+
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
@@ -17,17 +19,22 @@
         android:layout_alignParentTop="true"
         />
 
-    <RelativeLayout
+
+
+
+    <android.support.v4.widget.SwipeRefreshLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/swipe_container"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
 
-         <android.support.v7.widget.RecyclerView
-             android:id="@+id/recyclerview"
-             android:layout_width="wrap_content"
-             android:layout_height="wrap_content">
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/recyclerview"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
 
-         </android.support.v7.widget.RecyclerView>
+        </android.support.v7.widget.RecyclerView>
 
         <ProgressBar
             android:id="@+id/progressBar"
@@ -40,7 +47,32 @@
             app:layout_constraintTop_toTopOf="parent" />
 
 
-    </RelativeLayout>
+    </android.support.v4.widget.SwipeRefreshLayout>
+
+    <!--<RelativeLayout-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="match_parent">-->
+
+
+         <!--<android.support.v7.widget.RecyclerView-->
+             <!--android:id="@+id/recyclerview"-->
+             <!--android:layout_width="wrap_content"-->
+             <!--android:layout_height="wrap_content">-->
+
+         <!--</android.support.v7.widget.RecyclerView>-->
+
+        <!--<ProgressBar-->
+            <!--android:id="@+id/progressBar"-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_centerHorizontal="true"-->
+            <!--android:layout_centerVertical="true"-->
+            <!--app:layout_constraintEnd_toEndOf="parent"-->
+            <!--app:layout_constraintStart_toStartOf="parent"-->
+            <!--app:layout_constraintTop_toTopOf="parent" />-->
+
+
+    <!--</RelativeLayout>-->
 
     <android.support.design.widget.NavigationView
         android:id="@+id/navigation"
