--- a/NewsViews/app/src/main/res/layout/activity_main.xml
+++ b/NewsViews/app/src/main/res/layout/activity_main.xml
@@ -8,26 +8,19 @@
     android:layout_height="match_parent"
     android:fitsSystemWindows="true">
 
-
-
-    <android.support.v7.widget.Toolbar
-        android:id="@+id/toolbar"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize"
-        android:background="?attr/colorPrimary"
-        app:popupTheme="@style/AppTheme.PopupOverlay"
-        android:layout_alignParentTop="true"
-        />
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
 
-
-
+        <include layout="@layout/searchbar_toolbar"
+            android:id="@+id/searchbar_toolbar"/>
 
     <android.support.v4.widget.SwipeRefreshLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/swipe_container"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/recyclerview"
@@ -36,43 +29,10 @@
 
         </android.support.v7.widget.RecyclerView>
 
-        <ProgressBar
-            android:id="@+id/progressBar"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            android:layout_centerVertical="true"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
-
     </android.support.v4.widget.SwipeRefreshLayout>
 
-    <!--<RelativeLayout-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="match_parent">-->
 
-
-         <!--<android.support.v7.widget.RecyclerView-->
-             <!--android:id="@+id/recyclerview"-->
-             <!--android:layout_width="wrap_content"-->
-             <!--android:layout_height="wrap_content">-->
-
-         <!--</android.support.v7.widget.RecyclerView>-->
-
-        <!--<ProgressBar-->
-            <!--android:id="@+id/progressBar"-->
-            <!--android:layout_width="wrap_content"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:layout_centerHorizontal="true"-->
-            <!--android:layout_centerVertical="true"-->
-            <!--app:layout_constraintEnd_toEndOf="parent"-->
-            <!--app:layout_constraintStart_toStartOf="parent"-->
-            <!--app:layout_constraintTop_toTopOf="parent" />-->
-
-
-    <!--</RelativeLayout>-->
+    </LinearLayout>
 
     <android.support.design.widget.NavigationView
         android:id="@+id/navigation"
