--- a/NewsViews/app/src/main/res/layout/activity_search_results.xml
+++ b/NewsViews/app/src/main/res/layout/activity_search_results.xml
@@ -1,25 +1,44 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<android.support.v7.widget.CardView
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
+
+<LinearLayout android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="5dp"
-    android:layout_gravity="center"
-    app:cardCornerRadius="5dp"
-    app:cardElevation="10dp"
-    app:contentPadding="3dp">
+    android:orientation="vertical"
+    xmlns:android="http://schemas.android.com/apk/res/android">
 
-        <TextView
-            android:id="@+id/text_view_number_result"
+        <include layout="@layout/searchbar_toolbar"
+            android:id="@+id/search_result_toolbar"/>
+
+        <android.support.v7.widget.CardView
+            android:id="@+id/carview_show_results"
+            xmlns:android="http://schemas.android.com/apk/res/android"
+            xmlns:app="http://schemas.android.com/apk/res-auto"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
-
-        <ProgressBar
-            android:id="@+id/progressBar"
-            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center" />
+            android:layout_margin="40dp"
+            app:cardCornerRadius="5dp"
+            app:cardElevation="10dp"
+            app:contentPadding="3dp">
 
-</android.support.v7.widget.CardView>
+
+
+                <TextView
+                    android:id="@+id/text_view_number_result"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_margin="@dimen/dp10"
+                    android:textColor="@color/banker_color"
+                    android:fontFamily="@font/agency_fb"
+                    android:textSize="30sp" />
+
+                <ProgressBar
+                    android:id="@+id/progressBar"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center" />
+
+        </android.support.v7.widget.CardView>
+
+
+</LinearLayout>
+
