--- a/NewsViews/app/src/main/res/layout/introduction_slide_two.xml
+++ b/NewsViews/app/src/main/res/layout/introduction_slide_two.xml
@@ -18,7 +18,7 @@
             android:text="@string/app_name"
             android:textColor="@android:color/white"
             android:fontFamily="@font/agency_fb"
-            android:textSize="@dimen/slide_title"
+            android:textSize="@dimen/sp25"
             android:textStyle="bold" />
 
         <TextView
