--- a/NewsViews/app/src/main/res/values/dimens.xml
+++ b/NewsViews/app/src/main/res/values/dimens.xml
@@ -19,5 +19,5 @@
     <dimen name="sp16">16sp</dimen>
     <dimen name="slide_desc">16dp</dimen>
     <dimen name="desc_padding">40dp</dimen>
-     <dimen name="slide_title">17sp</dimen>
+     <dimen name="sp25">25sp</dimen>
 </resources>
