--- a/NewsViews/app/src/main/res/layout/activity_main.xml
+++ b/NewsViews/app/src/main/res/layout/activity_main.xml
@@ -39,6 +39,7 @@
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_gravity="start"
+        app:headerLayout="@layout/nav_header"
         app:menu="@menu/navigation_menu" />
 
 
