--- a/NewsViews/app/src/main/res/layout/activity_search_results.xml
+++ b/NewsViews/app/src/main/res/layout/activity_search_results.xml
@@ -1,8 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 
+<LinearLayout
 
-<LinearLayout android:layout_width="match_parent"
+    android:id="@+id/linearLayout"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:visibility="gone"
     android:orientation="vertical"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
